# dpi_classify_domain

./: .gitignore  BRANCHES.md  CHANGELOG.md  CMakeLists.txt  COPYING  INSTALL.md  NOTICE.md  README.md  Requirements.md  dpi_classify_domain.code-workspace
.github/: copilot-instructions.md
.github/workflows/: ci.yaml
config/: config.yaml  mini_dpi.cfg
docs/: Requirements.md  implementation_notes.md
include/: app_common.h  app_main.h  fqdn_list.h  pkt_helpers.h  sift_parser_sample.h  thread_classifier.h  thread_rx.h  version.h.in
src/: dpdk_ip_reassemble_example.c  dpdk_l3fwd_example.c  hyperscan_dpdk_example.c  main.c  main_try1.c  mini_dpi.c  pkt_helpers.c  sift_main_sample.c  simple_reader.c  thread_classifier.c  thread_rx.c
test/: gen_simple_pcap.py  simple.pcap  simple.pcapng  stderr.txt  stdout.txt  test_pkt_gen.py
